--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "ts-stream": "^3.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
