--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "ts-stream": "^3.0.0",
     "typescript": "^4.2.3",
+    "web-serial-polyfill": "^1.0.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
