--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "./",
   "main": "src/index.tsx",
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,12 +13,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "@types/w3c-web-serial": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "ts-stream": "^3.0.0",
     "typescript": "^4.2.3",
+    "web-serial-polyfill": "^1.0.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
