--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,10 +12,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.1
 
+      - name: Restore node_modules cache
+        uses: c-hive/gha-yarn-cache@v1
+
       - name: Install and Build
         run: |
-          npm install
-          npm run build
+          yarn install
+          yarn run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
