--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,13 +12,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.1
 
-      - name: Restore node_modules cache
+      - name: yarn install cache
         uses: c-hive/gha-yarn-cache@v1
 
-      - name: Install and Build
-        run: |
-          yarn install
-          yarn run build
+      - name: Install
+        run: yarn install
+        
+      - name: Build
+        run: yarn run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
