--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-spaces": "latest",
     "ts-stream": "^3.0.0",
     "typescript": "^4.2.3",
     "web-serial-polyfill": "^1.0.6",
