--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-syntax-highlighter": "^15.4.3",
     "ts-stream": "^3.0.0",
     "typescript": "^4.2.3",
-    "web-serial-polyfill": "1.0.6",
+    "web-serial-polyfill": "^1.0.10",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
