--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-syntax-highlighter": "^13.5.0",
     "@types/w3c-web-serial": "^1.0.1",
+    "fuse.js": "^6.4.6",
     "monaco-editor": "^0.21.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
