--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,18 +11,10 @@
     "javascript.preferences.quoteStyle": "single",
     "typescript.preferences.quoteStyle": "single",
     "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
         "**/.DS_Store": true,
-        ".github": true,
-        "node_modules": true,
-        ".eslintrc.js": true,
-        ".gitattributes": true,
-        ".gitignore": true,
-        "tsconfig.json": true,
-        "yarn.lock": true,
-        "public": true
+        "**/.git": true,
+        "**/.hg": true,
+        "**/.svn": true,
+        "**/CVS": true
     }
 }
