--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
+    "react-minimal-side-navigation": "^1.8.0",
     "react-scripts": "4.0.3",
     "react-spaces": "latest",
     "react-syntax-highlighter": "^15.4.3",
