--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@monaco-editor/react": "^4.1.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -27,8 +24,7 @@
     "react-syntax-highlighter": "^15.4.3",
     "ts-stream": "^3.0.0",
     "typescript": "^4.2.3",
-    "web-serial-polyfill": "^1.0.10",
-    "web-vitals": "^1.0.1"
+    "web-serial-polyfill": "^1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
